tests/baselines/reference/bitwiseNotOperatorInvalidOperations.errors.txt
==== tests/cases/compiler/bitwiseNotOperatorInvalidOperations.ts (4 errors) ====
    // Unary operator ~
    var q;
    
    // operand before ~
    var a = q~;  //expect error
             ~
!!! error TS1005: ',' expected.
              ~
!!! error TS1003: Identifier expected.
    
    // multiple operands after ~
    var mul = ~[1, 2, "abc"], "";  //expect error
                              ~~
!!! error TS1008: Unexpected token; 'identifier' expected.
    
    // miss an operand
    var b =~;
            ~
!!! error TS1003: Identifier expected.